5.kubernetes-network/deployment-redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redmine
  name: redmine
spec:
  replicas: 1
  strategy: 
    type: Recreate
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
        - image: redmine:4.1.1
          name: redmine
          ports:
            - containerPort: 3000
