5.kubernetes-network/service-redmine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
spec:
  selector:
    app: redmine
  ports:
  - name: redmine-port
    port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
